--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,11 @@
     "permissions": ["tabs", "storage"],
     "action": {
       "default_popup": "popup.html"
+    },
+    "icons": {
+      "16": "assets/icon_16.png",
+      "48": "assets/icon_48.png",
+      "128": "assets/icon_128.png"
     }
   }
   
